# basic_colormath

./: .gitignore  .pre-commit-config.yaml  .vimrc  .vimspector.json  CHANGELOG.md  LICENSE  README.md  delta_e.vim  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml  pypi-project.yml
src/basic_colormath/: __init__.py  conversion.py  distance.py  mix.py  py.typed  type_hints.py  vec_conversion.py  vec_conversion.py.orig  vec_distance.py
tests/: __init__.py  conftest.py  test_conversion.py  test_delta_e.py  test_mix.py  test_vec_conversion.py  test_vec_conversion.py.orig  test_vec_distance.py  test_vec_return_type.py
