[project]
name = "basic_colormath"
version = "0.1.5"
description = "Simple color conversion and perceptual (DeltaE CIE 2000) difference"
authors = [{ name = "Shay Hill", email = "shay_public@hotmail.com" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["commitizen", "colormath", "numpy", "pre-commit", "pytest", "tox"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.5"
tag_format = "$version"
major-version-zero = true
version_files = ["pyproject.toml:^version"]


[tool.isort]
profile = "black"


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{38,39,310,311,312}

[testenv]
deps =
    pytest
    numpy
    colormath
commands = pytest
"""


[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__.py"]

pythonVersion = "3.8"
pythonPlatform = "Any"

typeCheckingMode = "strict"
reportShadowedImports = true
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true
# reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true

venvPath = "."
venv = "./venv"
